roles/coachview/iptables.rules
# Generated by iptables-save v1.4.12 on Tue Jul 17 10:49:51 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11:936]
:ACM-Server-Rule - [0:0]
-A INPUT -j ACM-Server-Rule
-A FORWARD -j ACM-Server-Rule

-A ACM-Server-Rule  -i lo -j ACCEPT
#-A ACM-Server-Rule -p icmp --icmp-type any -j ACCEPT
-A ACM-Server-Rule -p 50 -j ACCEPT
-A ACM-Server-Rule -p 51 -j ACCEPT
-A ACM-Server-Rule -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A ACM-Server-Rule -p udp -m udp --dport 631 -j ACCEPT
-A ACM-Server-Rule -p udp -m udp --dport 53 -j ACCEPT
-A ACM-Server-Rule -p tcp -m tcp --dport 631 -j ACCEPT
-A ACM-Server-Rule -m state --state ESTABLISHED,RELATED -j ACCEPT
-A ACM-Server-Rule -p tcp -m state --state NEW -m tcp --dport 22 -s 172.20.16.2  -j ACCEPT
-A ACM-Server-Rule -p icmp --icmp-type any -s 172.20.16.2  -j ACCEPT
-A ACM-Server-Rule -p tcp -m state --state NEW -m tcp --dport 631  -j ACCEPT
-A ACM-Server-Rule -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Tue Jul 17 10:49:51 2012
